--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -24,6 +24,8 @@
     "@electron-forge/maker-squirrel": "^6.0.5",
     "@electron-forge/maker-zip": "^6.0.5",
     "@electron-forge/plugin-webpack": "^6.0.5",
+    "@types/react": "^18.0.29",
+    "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
